[package]
name = "custom-i2c-displays"
version = "1.0.0"
authors = ["Jason Spencer <jason@typi.ca>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.2" }
cortex-m-rt = { version = "0.6.13", features = ["device"] }
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103" ] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
embedded-hal = { version = "0.2.5" }
cortex-m-rtic = "0.5.6"
switch-hal = "0.3.2"
nb = "1.0.0"
[dependencies.stm32f1]
version = "0.13.0"
features = ["stm32f103", "rt"]

